// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HelpGuide HelpGuide.Step should match a snapshot 1`] = `
<Fragment>
  <Section
    hasMargin={false}
  >
    <H3 />
    <SubTitleH6 />
  </Section>
  <Section
    hasMargin={false}
    isFlex={true}
  >
    <component />
  </Section>
</Fragment>
`;

exports[`HelpGuide renderTimeline should match a snapshot when isMobileScreen FALSE 1`] = `
<VerticalTimeline
  currentIndex={3}
  onSelect={[MockFunction]}
  total={5}
/>
`;

exports[`HelpGuide renderTimeline should match a snapshot when isMobileScreen TRUE 1`] = `
<HorizontalTimeline
  currentIndex={3}
  onSelect={[MockFunction]}
  total={5}
/>
`;

exports[`HelpGuide should match a snapshot 1`] = `
<ContextProvider
  value={
    Object {
      "current": 0,
      "goNext": [Function],
      "goPrev": [Function],
      "isFirst": true,
      "isLast": false,
      "isLoading": false,
    }
  }
>
  <Section
    className="help-guide"
    hasMargin={false}
    isFlex={true}
    isFlexColumn={false}
  >
    <VerticalTimeline
      currentIndex={0}
      onSelect={[Function]}
      total={4}
    />
    <Fade
      in={true}
      timeout={300}
      unmountOnExit={true}
    >
      <HelpGuideStep
        component={[Function]}
        id="step-1"
      />
    </Fade>
  </Section>
</ContextProvider>
`;
